--- a/links/app/scss/style.scss
+++ b/links/app/scss/style.scss
@@ -1,100 +1,2 @@
-html {
-  box-sizing: border-box;
-  font-size: 100%;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-body {
-  background-color: #060042;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(2%, #060042),
-    color-stop(108%, #20a39e)
-  );
-  background-image: linear-gradient(#060042 2%, #20a39e 108%);
-  color: #ffffff;
-  min-height: 100vh;
-  text-align: center;
-  font-family: "Roboto", sans-serif;
-}
-
-h2 {
-  text-transform: uppercase;
-  font-size: 1rem;
-  font-weight: lighter;
-  letter-spacing: 0.08rem;
-}
-
-.logo {
-  width: 7.5rem;
-}
-
-a {
-  display: block;
-  margin: 0 auto 0.9375rem;
-  padding: 0.95rem;
-
-  font-size: 0.9rem;
-  color: #ffffff;
-  text-decoration: none;
-  border: 2px solid white;
-
-  &.featured {
-    position: relative;
-    font-weight: bold;
-    background-color: #ffffff;
-    color: #060042;
-    transition: color 200ms ease-in-out;
-
-    &:hover {
-      background-color: #ffffff;
-      opacity: 70%;
-    }
-
-    &:before {
-      content: "";
-      position: absolute;
-      top: 1px;
-      left: 1px;
-      width: calc(100% - 2px);
-      height: calc(100% - 2px);
-
-      border: 2px solid #060042;
-    }
-  }
-}
-
-a,
-.channels {
-  max-width: 25rem;
-}
-
-a,
-.channels > a {
-  transition: color 200ms ease-in-out;
-
-  &:hover {
-    background-color: #060042;
-    opacity: 100%;
-  }
-}
-
-.channels {
-  display: flex;
-  margin: 0 auto;
-
-  a {
-    flex: 1;
-    margin: 0.5rem;
-    padding: 0.3125rem 0.625rem;
-    background-color: #060042;
-    opacity: 70%;
-  }
-}
+@import "variables";
+@import "globals";
