--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  background-color: #darkpink;
+  background-color: #861657;
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(2%, #861657), color-stop(108%, #f6f0c4));
   background-image: linear-gradient(#861657 2%, #f6f0c4 108%);
   color: #ffffff;
@@ -28,8 +28,18 @@ h2 {
   letter-spacing: 0.08rem;
 }
 
+a {
+  max-width: 25rem;
+}
+
 .header {
-  margin: 2.75rem auto;
+  margin-top: 2.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.header__img {
+  width: 5rem;
+  border-radius: 60%;
 }
 
 .header > p {
@@ -37,25 +47,42 @@ h2 {
   color: #f6f0c4;
 }
 
-img {
-  width: 5rem;
-  border-radius: 60%;
+.logo {
+  width: 7.5rem;
+}
+
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+}
+
+.social img {
+  width: 1.55rem;
+  margin-right: 0.95rem;
+}
+
+img,
+svg {
   -webkit-transition: -webkit-transform 250ms ease-in-out;
   transition: -webkit-transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
 }
 
-img:hover {
+img:hover,
+svg:hover {
   -webkit-transform: scale(1.15);
           transform: scale(1.15);
 }
 
-.logo {
-  width: 7.5rem;
-}
-
-a {
+a.featured,
+.content > a {
   display: block;
   margin: 0 auto 0.9375rem;
   padding: 0.95rem;
@@ -65,7 +92,8 @@ a {
   border: 2px solid white;
 }
 
-a.featured {
+a.featured.featured,
+.content > a.featured {
   position: relative;
   font-weight: bold;
   background-color: #ffffff;
@@ -74,12 +102,14 @@ a.featured {
   transition: color 200ms ease-in-out;
 }
 
-a.featured:hover {
+a.featured.featured:hover,
+.content > a.featured:hover {
   background-color: #ffffff;
   opacity: 70%;
 }
 
-a.featured:before {
+a.featured.featured:before,
+.content > a.featured:before {
   content: "";
   position: absolute;
   top: 1px;
@@ -87,38 +117,5 @@ a.featured:before {
   width: calc(100% - 2px);
   height: calc(100% - 2px);
   border: 2px solid #060042;
-}
-
-a,
-.channels {
-  max-width: 25rem;
-}
-
-a,
-.channels > a {
-  -webkit-transition: color 200ms ease-in-out;
-  transition: color 200ms ease-in-out;
-}
-
-a:hover,
-.channels > a:hover {
-  opacity: 60%;
-}
-
-.channels {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0 auto;
-}
-
-.channels a {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  margin: 0.5rem;
-  padding: 0.3125rem 0.625rem;
-  background-color: #darkpink;
-  opacity: 70%;
 }
 /*# sourceMappingURL=style.css.map */
