--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -25,6 +25,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+div {
+  margin-top: 2.5rem;
+}
+
 h2 {
   text-transform: uppercase;
   font-size: 1rem;
