--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -21,6 +21,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+div {
+  margin-top: 2.5rem;
+}
+
 h2 {
   text-transform: uppercase;
   font-size: 1rem;
