--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -5,9 +5,20 @@ $reallyDarkTeal: rgba(0, 128, 128, 0.6);
 $evenDarkerTeal: rgba(112, 128, 144, 1);
 $white: #ffffff;
 $lightPink: lightpink;
+$charcoal: #333333;
+$blueCharcoal: #36454f;
+$Slate: darkslategray;
 
 // Font Sizes
 $font-sm: 0.875rem; // 14px
 $font-med: 1.125rem; // 18px
 $font-lg: 1.25rem; // 20px
 $font-xlg: 1.5rem; // 24px
+
+// Contact Form Colors
+$lightGrey: #ececec;
+$midGrey: #606060;
+$grey: #ababab;
+$darkGrey: #202035;
+$mintGreen: #15e38a;
+$deepPink: #ff1493;
