--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,30 +1,34 @@
 .header {
   display: flex;
-  background-color: $darkTeal;
-
-  &__img {
-    order: 2;
-    // flex: 1;
-    padding: 0.75rem;
-    max-width: 5.75rem;
-    max-height: 5.75rem;
-    border-radius: 6.25rem;
-    // background-image: url("./images/profile.png");
-    transition: transform 200ms ease-in-out;
-
-    &:hover {
-      transform: scale(1.15);
-    }
-  }
+  background-color: $blueCharcoal;
+  height: 7rem;
 
   &__text {
     order: 1;
     flex: 1;
     // padding: 0.75rem;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 2rem;
+    color: $white;
     font-family: "UnifrakturMaguntia", cursive;
     letter-spacing: 0.25rem;
+  }
+
+  a {
+    order: 2;
+  }
+
+  &__img {
+    padding: 0.75rem;
+    max-width: 5.75rem;
+    max-height: 5.75rem;
+    border-radius: 6.25rem;
+    transition: transform 200ms ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.15);
+    }
   }
 
   &__nav {
@@ -33,7 +37,7 @@
     font-size: 1.1rem;
 
     a {
-      color: $evenDarkerTeal;
+      color: $white;
       transition: font-size 150ms ease-in-out;
 
       &:not(:last-child) {
@@ -42,13 +46,20 @@
 
       &:hover {
         color: $lightPink;
+        border-bottom: $lightPink;
         font-size: 1.2rem;
       }
     }
   }
 }
 
+h3.intro {
+  padding: 4rem;
+  width: 50rem;
+  margin: 0 auto;
+}
+
 .flex-child {
   //   border: 1px solid red;
-  max-width: 15rem;
+  max-width: 18rem;
 }
