--- a/DB_links/links/app/scss/_globals.scss
+++ b/DB_links/links/app/scss/_globals.scss
@@ -142,14 +142,16 @@ a.featured,
     }
 
     &.discord-right, .discord-left {
-      // padding-left: 0.75rem;
-      // padding-right: 0.75rem;
       font-size: 1.5rem;
       line-height: 0.75;
     }
 
     &.discord-left {
       margin-left: .8rem;
+    }
+    &.special__chars{
+      padding-left: 0.75rem;
+      padding-right: 0.75rem;
     }
   }
 }
