--- a/DB_links/links/app/scss/style.css
+++ b/DB_links/links/app/scss/style.css
@@ -28,7 +28,7 @@ div {
 h2 {
   text-transform: uppercase;
   font-size: 1rem;
-  font-weight: lighter;
+  font-weight: bold;
   letter-spacing: 0.08rem;
 }
 
@@ -85,6 +85,10 @@ a:hover {
 
 .social img {
   width: 1.55rem;
+}
+
+.social__icon#twitch {
+  margin-top: 0.15rem;
 }
 
 img,
