Tweaked text alignment

--- a/DB_links/links/app/scss/_globals.scss
+++ b/DB_links/links/app/scss/_globals.scss
@@ -166,11 +166,12 @@ a.featured,
 
     &.discord-left {
       margin-left: 1.15rem;
+      margin-right: .075rem;
     }
 
-    &.discord-right {
-      margin-left: .03rem;
-    }
+    // &.discord-right {
+    //   margin-left: .03rem;
+    // }
 
     &.special__chars{
       padding-left: 0.75rem;
