More minor alignment adjustments

--- a/DB_links/links/app/scss/_globals.scss
+++ b/DB_links/links/app/scss/_globals.scss
@@ -166,7 +166,7 @@ a.featured,
 
     &.discord-left {
       margin-left: 1.15rem;
-      margin-right: .075rem;
+      // margin-right: .075rem;
     }
 
     // &.discord-right {
