--- a/DB_links/links/app/scss/style.css
+++ b/DB_links/links/app/scss/style.css
@@ -51,6 +51,7 @@ a:hover {
 
 .header__img {
   width: 5rem;
+  border: 1.25px solid rgba(250, 250, 250, 0.75);
   border-radius: 60%;
   margin: 0;
 }
@@ -73,9 +74,13 @@ a:hover {
   height: 1.75rem;
   width: 5rem;
   text-decoration: none;
+  border-radius: 0.75rem;
+}
+
+.handle,
+.channels__link {
   color: darkgray;
   background-color: lightGrey;
-  border-radius: 0.75rem;
 }
 
 .header > p {
@@ -130,8 +135,53 @@ svg:hover {
 }
 
 a.featured,
+.channels > a,
 .content > a {
   display: block;
+}
+
+.channels {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 30rem;
+  margin: 0 auto;
+  padding: 0.35rem 3rem 2rem 3rem;
+}
+
+.channels__link {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  color: #ffffff;
+  height: 2rem;
+  padding: 0.45rem 1rem;
+  font-size: 0.85rem;
+  text-decoration: none;
+  border: 1.25px solid white;
+  border-radius: 3rem;
+  color: #fafafa;
+  background-color: rgba(204, 135, 145, 0.75);
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  transition: -webkit-transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+}
+
+.channels__link:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+.channels__link:not(:last-child) {
+  margin-right: 0.75rem;
+}
+
+a.featured,
+.content > a {
   margin: 0 auto 0.9375rem;
   padding: 0.95rem;
   font-size: 0.9rem;
