--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,17 +1,22 @@
 .header {
   display: flex;
   background-color: $blueCharcoal;
-  height: 7rem;
+  height: 5rem;
 
   &__text {
     order: 1;
     flex: 1;
-    // padding: 0.75rem;
+    margin-left: 0;
     font-weight: 400;
     font-size: 2rem;
     color: $white;
     font-family: "UnifrakturMaguntia", cursive;
     letter-spacing: 0.25rem;
+    transition: font-size 150ms ease-in-out;
+      
+      &:hover {
+        font-size: 2.1rem;
+      }
   }
 
   a {
@@ -19,9 +24,9 @@
   }
 
   &__img {
-    padding: 0.75rem;
-    max-width: 5.75rem;
-    max-height: 5.75rem;
+    padding: 0.95rem 0.75rem 0.75rem 0.75rem;
+    max-width: 5.15rem;
+    max-height: 5.15rem;
     border-radius: 6.25rem;
     transition: transform 200ms ease-in-out;
     cursor: pointer;
@@ -34,20 +39,20 @@
   &__nav {
     order: 3;
     flex: 1;
-    font-size: 1.1rem;
+    font-size: 1.08rem;
 
     a {
       color: $white;
-      transition: font-size 150ms ease-in-out;
+      transition: font-size 175ms ease-in-out;
 
       &:not(:last-child) {
-        margin-right: 0.3rem;
+        margin-right: 1.5rem;
       }
 
       &:hover {
         color: $lightPink;
         border-bottom: $lightPink;
-        font-size: 1.2rem;
+        font-size: 1.15rem;
       }
     }
   }
